--- a/notebook/taller_formularios/css/style.css
+++ b/notebook/taller_formularios/css/style.css
@@ -24,33 +24,41 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
+    width: 350px;
+    box-sizing: border-box;
+}
+
+form * {
+    text-align: center;
 }
 
 label {
     font-size: 1rem;
-    margin-bottom: 8px;
+    margin-bottom: 6px;
     color: #444;
 }
 
-input[type="text"] {
+.boxEneter {
     width: 100%;
     padding: 10px;
+    box-sizing: border-box;
     font-size: 1rem;
     border: 1px solid #ccc;
     border-radius: 6px;
     outline: none;
     transition: 0.3s;
+    display: block;
+    margin: 0 auto 15px auto;
 }
 
-input[type="text"]:focus {
+.boxEneter:focus {
     border-color: #5563DE;
     box-shadow: 0 0 5px rgba(85, 99, 222, 0.4);
 }
 
 button {
-    margin-top: 15px;
-    padding: 10px 20px;
+    margin-top: 10px;
+    padding: 12px 25px;
     font-size: 1rem;
     background-color: #a9127c;
     color: white;
